styles.css
/* ... */
.x-spreadsheet-calendar .calendar-body td > .cell:hover {
	background: #ecf6fd;
}
.x-spreadsheet-calendar .calendar-body td > .cell.active,
.x-spreadsheet-calendar .calendar-body td > .cell.active:hover {
	background: #ecf6fd;
	color: #2185d0;
}
.x-spreadsheet-calendar .calendar-body td > .cell.disabled {
	pointer-events: none;
	opacity: 0.5;
}
.x-spreadsheet-datepicker {
	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
	position: absolute;
	left: 0;
	top: calc(100% + 5px);
	z-index: 10;
	width: auto;
}
.x-spreadsheet-buttons {
	display: flex;
	justify-content: flex-end;
}
.x-spreadsheet-buttons .x-spreadsheet-button {
	margin-left: 8px;
}
.x-spreadsheet-button {
	display: inline-block;
	border-radius: 3px;
	line-height: 1em;
	min-height: 1em;
	white-space: nowrap;
	text-align: center;
	cursor: pointer;
	font-size: 1em;
	font-weight: 700;
	padding: 0.75em 1em;
	color: rgba(0, 0, 0, 0.6);
	background: #e0e1e2;
	text-decoration: none;
	font-family: "Lato", "proxima-nova", "Helvetica Neue", Arial, sans-serif;
	outline: none;
	vertical-align: baseline;
	zoom: 1;
	user-select: none;
	transition: all 0.1s linear;
}
.x-spreadsheet-button.active,
.x-spreadsheet-button:hover {
	background-color: #c0c1c2;
	color: rgba(0, 0, 0, 0.8);
}
.x-spreadsheet-button.primary {
	color: #fff;
	background-color: #2185d0;
}
.x-spreadsheet-button.primary:hover,
.x-spreadsheet-button.primary.active {
	color: #fff;
	background-color: #1678c2;
}
.x-spreadsheet-form-input {
	font-size: 1em;
	position: relative;
	font-weight: 400;
	display: inline-flex;
	color: rgba(0, 0, 0, 0.87);
}
.x-spreadsheet-form-input input {
	z-index: 1;
	margin: 0;
	max-width: 100%;
	flex: 1 0 auto;
	outline: 0;
	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
	text-align: left;
	line-height: 30px;
	height: 30px;
	padding: 0 8px;
	background: #fff;
	border: 1px solid #e9e9e9;
	border-radius: 3px;
	transition: box-shadow 0.1s ease, border-color 0.1s ease;
	box-shadow: inset 0 1px 2px hsla(0, 0%, 4%, 0.06);
}
.x-spreadsheet-form-input input:focus {
	border-color: #4b89ff;
	box-shadow: inset 0 1px 2px rgba(75, 137, 255, 0.2);
}
.x-spreadsheet-form-select {
	position: relative;
	display: inline-block;
	background: #fff;
	border: 1px solid #e9e9e9;
	border-radius: 2px;
	cursor: pointer;
	color: rgba(0, 0, 0, 0.87);
	user-select: none;
	box-shadow: inset 0 1px 2px hsla(0, 0%, 4%, 0.06);
}
.x-spreadsheet-form-select .input-text {
	text-overflow: ellipsis;
	white-space: nowrap;
	min-width: 60px;
	width: auto;
	height: 30px;
	line-height: 30px;
	padding: 0 8px;
}
.x-spreadsheet-form-fields {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}
.x-spreadsheet-form-fields .x-spreadsheet-form-field {
	flex: 0 1 auto;
}
.x-spreadsheet-form-fields .x-spreadsheet-form-field .label {
	display: inline-block;
	margin: 0 10px 0 0;
}
.x-spreadsheet-form-field {
	display: block;
	vertical-align: middle;
	margin-left: 10px;
	margin-bottom: 10px;
}
.x-spreadsheet-form-field:first-child {
	margin-left: 0;
}
.x-spreadsheet-form-field.error .x-spreadsheet-form-select,
.x-spreadsheet-form-field.error input {
	border-color: #f04134;
}
.x-spreadsheet-form-field .tip {
	color: #f04134;
	font-size: 0.9em;
}
.x-spreadsheet-dimmer {
	display: none;
	position: absolute;
	top: 0 !important;
	left: 0 !important;
	width: 100%;
	height: 100%;
	text-align: center;
	vertical-align: middle;
	background-color: rgba(0, 0, 0, 0.6);
	opacity: 0;
	-webkit-animation-fill-mode: both;
	animation-fill-mode: both;
	-webkit-animation-duration: 0.5s;
	animation-duration: 0.5s;
	transition: background-color 0.5s linear;
	user-select: none;
	z-index: 1000;
}
.x-spreadsheet-dimmer.active {
	display: block;
	opacity: 1;
}
form fieldset {
	border: none;
}
form fieldset label {
	display: block;
	margin-bottom: 0.5em;
	font-size: 1em;
	color: #666;
}
form fieldset select {
	font-size: 1.1em;
	width: 100%;
	background-color: #fff;
	border: none;
	border-bottom: 2px solid #ddd;
	padding: 0.5em 0.85em;
	border-radius: 2px;
}
.x-spreadsheet-modal,
.x-spreadsheet-toast {
	font-size: 13px;
	position: fixed;
	z-index: 1001;
	text-align: left;
	line-height: 1.25em;
	min-width: 360px;
	color: rgba(0, 0, 0, 0.87);
	font-family: "Lato", "Source Sans Pro", Roboto, Helvetica, Arial, sans-serif;
	border-radius: 4px;
	border: 1px solid rgba(0, 0, 0, 0.1);
	background-color: #fff;
	background-clip: padding-box;
	box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px;
}
.x-spreadsheet-toast {
	background-color: rgba(255, 255, 255, 0.85);
}
.x-spreadsheet-modal-header,
.x-spreadsheet-toast-header {
	font-weight: 600;
	background-clip: padding-box;
	background-color: rgba(255, 255, 255, 0.85);
	border-bottom: 1px solid rgba(0, 0, 0, 0.05);
	border-radius: 4px 4px 0 0;
}
.x-spreadsheet-modal-header .x-spreadsheet-icon,
.x-spreadsheet-toast-header .x-spreadsheet-icon {
	position: absolute;
	right: 0.8em;
	top: 0.65em;
	border-radius: 18px;
}
.x-spreadsheet-modal-header .x-spreadsheet-icon:hover,
.x-spreadsheet-toast-header .x-spreadsheet-icon:hover {
	opacity: 1;
	background: rgba(0, 0, 0, 0.08);
}
.x-spreadsheet-toast-header {
	color: #f2711c;
}
.x-spreadsheet-modal-header {
	border-bottom: 1px solid #e0e2e4;
	background: rgba(0, 0, 0, 0.08);
	font-size: 1.0785em;
}
.x-spreadsheet-modal-header,
.x-spreadsheet-modal-content,
.x-spreadsheet-toast-header,
.x-spreadsheet-toast-content {
	padding: 0.75em 1em;
}
@media screen and (min-width: 320px) and (max-width: 480px) {
	.x-spreadsheet-toolbar {
		display: none;
	}
}
.x-spreadsheet-icon {
	width: 18px;
	height: 18px;
	margin: 1px 1px 2px 1px;
	text-align: center;
	vertical-align: middle;
	user-select: none;
	overflow: hidden;
	position: relative;
	display: inline-block;
}
/* ... */

